# sscan-app

./: .actrc  .editorconfig  .envrc  .gitignore  .npmrc  CODEOWNERS  README.md  dev.vars.tpl  drizzle.config.js  env.tpl  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  turbo.json
.github/: FUNDING.yml  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  deploy_app.yml  deploy_pages.yml
apps/desktop/: .prettierignore  README.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/app/: constants.ts  root.tsx
apps/desktop/app/components/: Navbar.tsx
apps/desktop/app/components/ui/: badge.tsx  breadcrumb.tsx  select.tsx  sheet.tsx  toast.tsx  tooltip.tsx
apps/desktop/app/hooks/: use-toast.ts
apps/desktop/app/routes/: _app.tsx
apps/desktop/app/routes/_app._index/: route.tsx
apps/desktop/app/routes/_app.dashboard/: route.tsx
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/desktop/src/lib/components/: Navbar.svelte  Topbar.svelte
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/web/: .dev.vars  README.md  eslint.config.js  load-context.ts  package.json  playwright.config.ts  prettier.config.js  remix-futures.d.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml
apps/web/app/: components.json  entry.server.tsx  root.tsx  types.ts
apps/web/app/components/: Breadcrumb.tsx  HeaderDisplay.tsx  Icon.tsx  MobileNav.tsx  ModeSwitcher.tsx  Navbar.tsx  Search.tsx  UserMenu.tsx  header-display.tsx  mobile-nav.tsx  mode-switcher.tsx  user-menu.tsx
apps/web/app/components/data-table/: index.tsx
apps/web/app/components/ui/: avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sheet.tsx  table.tsx  tabs.tsx  toast.tsx  tooltip.tsx
apps/web/app/routes/: _app.tsx  _index.tsx  admin.tsx  auth.$provider.callback.tsx  auth.$provider.tsx  auth.tsx  dashboard.tsx  login.tsx  logout.tsx
apps/web/app/routes/_app.admin._index/: route.tsx
apps/web/app/services/: auth.server.ts  cookies.server.ts  db.server.ts  session.server.ts  session.ts
apps/web/app/types/: index.ts
apps/web/app/utils/: hash.ts
apps/web/functions/: [[path]].ts
apps/web/src/: hooks.server.ts  worker-configuration.d.ts
apps/web/src/routes/: +layout.svelte
pages_apps/web/: README.md  load-context.ts  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts
pages_apps/web/app/: constants.ts
pages_apps/web/app/components/: Navbar.tsx  Search.tsx  header-display.tsx  mobile-nav.tsx  mode-switcher.tsx  user-menu.tsx
pages_apps/web/app/routes/: _app.tsx  _index.tsx  login.tsx
pages_apps/web/app/services/: cookies.server.ts  db.server.ts
scripts/: generate-admin-seed.js  generate-admin-seed.ts  generate-hash.js
seeds/: admin-profile.sql
src/: app.css  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/src/: db.rs  lib.rs  main.rs  tray.rs
src/lib/components/: Navbar.svelte  Topbar.svelte
src/lib/components/ui/: Navbar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte
templates/: act.tpl  dev.vars.tpl  env.tpl  wrangler.toml.tpl
tooling/cf_pages_secrets/: .gitignore  LICENSE-MIT  action.yml  package.json
tooling/cf_pages_secrets/src/: main.js
tooling/config/: README.md  base.json  eslint.js  library.json  package.json  prettier.js  remix.json  tsconfig.json  worker.json
tooling/github/: package.json
tooling/github/setup/: action.yml
tooling/tailwind/: base.ts  eslint.config.js  native.ts  package.json  prettier.config.js  tsconfig.json  web.ts
(+23 files in other folders)
