cargo-features = ["profile-rustflags", "trim-paths"]
[package]
name = "sscan"
version = "0.1.0"
description = "SSCAN Application"
authors = ["NWL NEXUS"]
license = ""
repository = ""
default-run = "sscan"
edition = "2021"

[lib]
name = "sscan_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.dev]
incremental = true          # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1                            # Allows LLVM to perform better optimization.
lto = true                                   # Enables link-time-optimizations.
opt-level = "s"                              # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"                              # Higher performance by disabling panic handlers.
strip = true                                 # Ensures debug symbols are removed.
trim-paths = "all"                           # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.16", features = ["tray-icon"] }
tauri-plugin = "2.0.1"
tauri-plugin-fs = "2.0.0-rc.5"
tauri-plugin-process = "2.0.0-rc.1"
tauri-plugin-shell = "2.0.0-rc.3"
tauri-plugin-deep-link = "2.0.0-rc.6"
tauri-plugin-store = "2.0.0-rc.3"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]  # or "postgres", or "mysql"
version = "2.0.0-rc.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-rc.4"
